--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                     <a class="nav-link" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="aws.html">AWS</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#" onclick="abrir()">
                     <span id="contacto">contacto</span></a>
                 </li>
